# ABC509_ena_metrics

./: README.md  pyproject.toml
src/: main.py
src/dependencies/: __init__.py  genome_metrics_client.py  genome_metrics_normalise.py  genome_metrics_schema.py  new_assemblies_schema.py
