[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dependencies"
version = "0.1.0"
description = "Fetch and normalize ENA genome assembly quality metrics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Juan Pablo Narváez Gómez", email = "juann@ebi.ac.uk" }
]

dependencies = [
  "pydantic==2.12.5",
  "requests>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dependencies = ["py.typed"]

[project.urls]
Homepage = "https://github.com/your-org/ena-qc"
Issues = "https://github.com/your-org/ena-qc/issues"
